Prévia da tela de cadastro

--- a/LocadoraOleTraining/LocadoraOleTraining/Info.plist
+++ b/LocadoraOleTraining/LocadoraOleTraining/Info.plist
@@ -11,6 +11,14 @@
 		<string>Dosis-Medium.otf</string>
 		<string>Dosis-Regular.otf</string>
 		<string>Dosis-SemiBold.otf</string>
+		<string>Roboto-Black.ttf</string>
+		<string>Roboto-Bold.ttf</string>
+		<string>Roboto-Condensed.ttf</string>
+		<string>Roboto-Italic.ttf</string>
+		<string>Roboto-Light.ttf</string>
+		<string>Roboto-Medium.ttf</string>
+		<string>Roboto-Regular.ttf</string>
+		<string>Roboto-Thin.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
