--- a/LocadoraOleTraining/podfile
+++ b/LocadoraOleTraining/podfile
@@ -4,5 +4,6 @@ use_frameworks!
 target 'LocadoraOleTraining' do
     pod 'TPKeyboardAvoiding', '1.3'
     pod 'AFNetworking', '~> 3.0'
-    pod 'Tabman'
+    pod 'Tabman', '1.10.2'
+    pod 'MBProgressHUD', '~> 1.1.0'
 end
